--- a/index.html
+++ b/index.html
@@ -8,19 +8,63 @@
     <link rel="stylesheet" href="style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 <body>
 <header>
     <div class="container">
-        fhfhf2134
+        <div class="row">
+            <div class="col-3 border-start d-flex justify-content-center mt-2">
+                <img src="img/logo.svg" alt="логотип">
+            </div>
+            <div class="col-2 border-start d-flex justify-content-center">
+                <span class="fs-6 m-3 d-flex align-items-center" >+7 (123) 456 78 90</span>
+            </div>
+            <div class="col border-start d-flex justify-content-center">
+                <nav class="navbar navbar-expand-lg ">
+                    <div class="container-fluid">
+                        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Наши салоны
+                                    </button>
+                                    <ul class="dropdown-menu ">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-3 d-flex align-items-center border-start justify-content-center">
+                <button type="button" class="btn btn-success "><i class="bi bi-eye m-1"></i>Версия для слабовидящих</button>
+            </div>
+            <div class="col d-flex align-items-center border-start justify-content-center">
+                <img src="img/vk.svg" alt="vk">
+            </div>
+            <div class="col d-flex align-items-center border-start justify-content-center">
+                <img src="img/Vector(2).svg" alt="ютуб">
+            </div>
+            <div class="col d-flex align-items-center border-start justify-content-center">
+                <img src="img/Vector(3).svg" alt="фэйсбук">
+            </div>
+            <div class="col d-flex align-items-center border-start border-end justify-content-center">
+                <img src="img/instagram.svg" alt="инстограм">
+            </div>
+        </div>
     </div>
 </header>
+<main>
+    <div class="container bg-success">
 
+    </div>
 
-
-
-
+</main>
 
 
 
