заверешения сайта, но с недочетами

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="img/logo.svg" alt="логотип">
             </div>
             <div class="col-2 border-start d-flex justify-content-center">
-                <span class="fs-6 m-3 d-flex align-items-center" >+7 (123) 456 78 90</span>
+                <span class="fs-6 m-3 d-flex align-items-center">+7 (123) 456 78 90</span>
             </div>
             <div class="col border-start d-flex justify-content-center">
                 <nav class="navbar navbar-expand-lg ">
@@ -42,34 +42,331 @@
                 </nav>
             </div>
             <div class="col-3 d-flex align-items-center border-start justify-content-center">
-                <button type="button" class="btn btn-success "><i class="bi bi-eye m-1"></i>Версия для слабовидящих</button>
+                <button type="button" class="btn btn-success "><i class="bi bi-eye m-1"></i>Версия для слабовидящих
+                </button>
             </div>
             <div class="col d-flex align-items-center border-start justify-content-center">
-                <img src="img/vk.svg" alt="vk">
+                <a href="#">
+                    <img src="img/vk.svg" alt="vk">
+                </a>
             </div>
             <div class="col d-flex align-items-center border-start justify-content-center">
-                <img src="img/Vector(2).svg" alt="ютуб">
+                <a href="#">
+                    <img src="img/Vector(2).svg" alt="ютуб">
+                </a>
             </div>
             <div class="col d-flex align-items-center border-start justify-content-center">
-                <img src="img/Vector(3).svg" alt="фэйсбук">
+                <a href="#">
+                    <img src="img/Vector(3).svg" alt="фэйсбук">
+                </a>
             </div>
             <div class="col d-flex align-items-center border-start border-end justify-content-center">
-                <img src="img/instagram.svg" alt="инстограм">
+                <a href="#">
+                    <img src="img/instagram.svg" alt="инстограм">
+                </a>
             </div>
         </div>
     </div>
 </header>
-<main>
-    <div class="container bg-success">
 
+<!--header закончился-->
+
+<main>
+    <div class="container-fluid bg-success bg-opacity-75 text-white">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-2 d-flex justify-content-center">
+                    <span>Косметология</span>
+                </div>
+                <div class="col-2 d-flex justify-content-center">
+                    Пластическая хирургия
+                </div>
+                <div class="col-2 d-flex justify-content-center">
+                    Стоматология
+                </div>
+                <div class="col-2 d-flex justify-content-center">
+                    Лазерная медицина
+                </div>
+                <div class="col-2 d-flex justify-content-center">
+                    Контакты
+                </div>
+                <div class="col-2 d-flex justify-content-end">
+                    <button type="button" class="btn btn-success btn btn-light mb-3 mt-3">Запись на прием</button>
+                </div>
+            </div>
+        </div>
+
+        <!--меню контейнера-->
+
+        <div class="container p-0">
+            <div class="row">
+                <div class="col-5 align-self-center">
+                    <div class="row d-flex flex-column">
+                        <div class="col">
+                            <h2>Косметология</h2>
+                        </div>
+                        <div class="col py-4">
+                    <span>Современный мир диктует новые каноны жизни:
+                        ухоженное лицо и тело, стройная, подтянутая фигура — сегодня это неотъемлемые черты
+                        привлекательной внешности, характеризующие человека благополучного и успешного.</span>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-success btn-success">ПОДРОБНЕЕ</button>
+                        </div>
+                        <div class="col d-flex align-self-end justify-content-end pt-2">
+                            <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+                                <button type="button" class="btn btn-outline-light"><i class="bi bi-arrow-left"></i>
+                                </button>
+                                <button type="button" class="btn btn-outline-light"><i class="bi bi-arrow-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-7">
+                    <div class="row">
+                        <div class="col">
+                            <img src="img/Rectangle7.png" alt="фото" class="w-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container  text-center p-0">
+                <div class="row ">
+                    <div class="col btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-success btn-lg">Комплексные процедуры</button>
+                        <button type="button" class="btn btn-success btn-lg">Центр обучения</button>
+                        <button type="button" class="btn btn-success btn-lg">VIP клиентам</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!--1 контейнер закончился -->
+
+    <div class="conteiner my-5 d-flex justify-content-end">
+        <div class="row">
+            <div class="col-5 d-flex">
+                <div class="row d-flex flex-column bg-success bg-opacity-75 text-white">
+                    <div class="col m-2">
+                        <button type="button" class="btn btn-success btn-success">Инновации</button>
+                    </div>
+                    <div class="col px-4">
+                        <span>Мы практикуем новый курс процедур аппаратной косметологии </span>
+                    </div>
+                    <div class="col">
+                        <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+                            <button type="button" class="btn btn-outline-light"><i class="bi bi-arrow-right"></i>
+                            </button>
+                            <span class="fs-5">ПОДРОБНЕЕ</span>
+
+                        </div>
+                    </div>
+                    <div class="col p-0">
+                        <img src="img/innovations__img.png" alt="картинка">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-7 p-0">
+                <div class="row">
+                    <div class="col">
+                        <ul>
+                            <button type="button" class="btn btn-success btn-success mb-4">Эстетика красоты</button>
+                            <li class="d-flex text-black-50"><span class="fs-1">78</span>
+                                <p class=" fs-5">Современных центра в странах СНГ</p></li>
+                            <li class="d-flex text-black-50"><span class="fs-1">78</span>
+                                <p class=" fs-5">Современных центра в странах СНГ</p></li>
+                            <li class="d-flex "><span class="fs-1 text-success ">20</span>
+                                <p class="fs-4 ">Уникальных патентов в области косметологии</p></li>
+                            <li class="d-flex text-black-50"><span class="fs-1">78</span>
+                                <p class=" fs-5">Современных центра в странах СНГ</p></li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <img src="img/Rectangle13.png" alt="картинка">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--2 контейнер закончился-->
+
+    <div class="conteiner">
+        <div class="row">
+            <div class="col bg-success bg-opacity-75">
+                <div class="row">
+                    <div class="col">
+                        <button type="button" class="btn btn-success btn-success m-3">Новости</button>
+                        <p>Почему рекомендуется посещать профессионального косметолога. Мнение специалистов центра</p>
+                        <p>Стандартизация деятельности клиник в соответствии с ISO 9001:2015.</p>
+                        <p>Индивидуальный подход к каждому пациенту и подбор оптимальных косметологических методик.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row">
+                    <div class="col bg-success-subtle">
+                        <h3>Почему рекомендуется посещать профессионального косметолога. Мнение специалистов центра</h3>
+                        <ul>
+                            <li>Процедуры аппаратной косметологии на оборудовании экспертного класса от ведущих мировых
+                                производителей могут проводиться в любом возрасте и решать широкий спектр проблем:
+                                возрастные изменения, покраснения, акне и купероз, потеря тонуса и упругости кожи,
+                                отечность, целлюлит и т. п.
+                            </li>
+                            <li>С помощью инъекционных методик мы можем разгладить морщины, провести объёмное
+                                моделирование,
+                                увлажнить кожу, ввести активные вещества в поверхностные и средние слои кожи,
+                                запустить процессы омоложения.
+                            </li>
+                            <li>Лазерное и фотоомоложение помогут запустить процесс синтеза собственного коллагена,
+                                улучшить светооптические свойства кожи, а также получить максимальный эффект подтяжки
+                                лица
+                                без уколов и длительного восстановительного периода.
+                            </li>
+                            <li>Курс процедур лазерной эпиляции поможет навсегда избавиться от проблемы нежелательных
+                                волос.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--3 контейнер закончился-->
+
+    <div class="container text-center">
+        <div class="row">
+            <h2 class="m-5 ">Актуальные спецпредложения </h2>
+            <div class="col">
+                <div class="bg-success text-white">
+                    <button type="button" class="btn btn-success btn-success m-3 z-1 position-absolute  rounded-3">
+                        Косметология
+                    </button>
+                    <img src="img/Rectangle23.png">
+                    <p>Лазерное и фотоомоложение
+                        <button type="button" class="btn btn-outline-light mt-4 mb-4"><i class="bi bi-arrow-right"></i>
+                        </button>
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="bg-success text-white">
+                    <button type="button" class="btn btn-success btn-success m-3 z-1 position-absolute  rounded-3">
+                        Косметология
+                    </button>
+                    <img src="img/Rectangle24.png">
+                    <p>Лазерное и фотоомоложение
+                        <button type="button" class="btn btn-outline-light mt-4 mb-4"><i class="bi bi-arrow-right"></i>
+                        </button>
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="bg-success text-white">
+                    <button type="button" class="btn btn-success btn-success m-3 z-1 position-absolute  rounded-3">
+                        Косметология
+                    </button>
+                    <img src="img/Rectangle25.png">
+                    <p>Лазерное и фотоомоложение
+                        <button type="button" class="btn btn-outline-light mt-4 mb-4"><i class="bi bi-arrow-right"></i>
+                        </button>
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="bg-success text-white">
+                    <button type="button" class="btn btn-success btn-success m-3 z-1 position-absolute  rounded-3">
+                        Косметология
+                    </button>
+                    <img src="img/Rectangle26.png">
+                    <p>Лазерное и фотоомоложение
+                        <button type="button" class="btn btn-outline-light mt-4 mb-4"><i class="bi bi-arrow-right"></i>
+                        </button>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--контейнер 4 закончился-->
+
+    <div class="container text-center mt-5 mb-5">
+        <div class="row ">
+            <div class="col-3">
+                <h4 class="d-flex justify-content-start mb-4">Услуги</h4>
+                <p class="d-flex justify-content-start">Косметология</p>
+                <p class="d-flex justify-content-start">Пластическая хирургия</p>
+                <p class="d-flex justify-content-start">Стоматология</p>
+                <p class="d-flex justify-content-start">Лазерная медицина</p>
+            </div>
+            <div class="col-3">
+                <h4 class="d-flex justify-content-start mb-4">Услуги</h4>
+                <p class="d-flex justify-content-start">Косметология</p>
+                <p class="d-flex justify-content-start">Пластическая хирургия</p>
+                <p class="d-flex justify-content-start">Стоматология</p>
+                <p class="d-flex justify-content-start">Лазерная медицина</p>
+            </div>
+            <div class="col-3">
+                <h4 class="d-flex justify-content-start mb-4">Услуги</h4>
+                <p class="d-flex justify-content-start">Косметология</p>
+                <p class="d-flex justify-content-start">Пластическая хирургия</p>
+                <p class="d-flex justify-content-start">Стоматология</p>
+                <p class="d-flex justify-content-start">Лазерная медицина</p>
+            </div>
+            <div class="col">
+                Column
+            </div>
+        </div>
+    </div>
 </main>
 
+<!--main закончился-->
 
-
-
-
+<footer>
+    <div class="container border-top">
+        <div class="row">
+            <div class="col-3 border-start d-flex justify-content-center fs-6">
+                (c) 2021. Центр космелогии. Все права защищены.
+                Наши сертификаты на осуществление деятельности.
+                Патенты на использование технологий.
+            </div>
+            <div class="col-3  d-flex justify-content-center">
+                <span class="fs-6 m-3 d-flex align-items-center"><a href="#">Политика конфиденциальности</a></span>
+            </div>
+            <div class="col-3 d-flex align-items-center border-start justify-content-center">
+                <button type="button" class="btn btn-success "><i class="bi bi-eye m-1"></i>Версия для слабовидящих
+                </button>
+            </div>
+            <div class="col d-flex align-items-center border-start justify-content-center">
+                <a href="#">
+                    <img src="img/vk.svg" alt="vk">
+                </a>
+            </div>
+            <div class="col d-flex align-items-center border-start justify-content-center">
+                <a href="#">
+                    <img src="img/Vector(2).svg" alt="ютуб">
+                </a>
+            </div>
+            <div class="col d-flex align-items-center border-start justify-content-center">
+                <a href="#">
+                    <img src="img/Vector(3).svg" alt="фэйсбук">
+                </a>
+            </div>
+            <div class="col d-flex align-items-center border-start border-end justify-content-center">
+                <a href="#">
+                    <img src="img/instagram.svg" alt="инстограм">
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
