--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-<header>
-    <div class="container">
-        <div class="row">
+<header class="header">
+    <div class="header_container container">
+        <div class=" header_container-row row">
             <div class="col-3 border-start d-flex justify-content-center mt-2">
                 <img src="img/logo.svg" alt="логотип">
             </div>
@@ -195,9 +195,9 @@
 
     <!--2 контейнер закончился-->
 
-    <div class="conteiner">
+    <div class="conteiner ">
         <div class="row">
-            <div class="col bg-success bg-opacity-75">
+            <div class="col bg-success bg-opacity-75 ">
                 <div class="row">
                     <div class="col">
                         <button type="button" class="btn btn-success btn-success m-3">Новости</button>
@@ -321,10 +321,46 @@
                 <p class="d-flex justify-content-start">Лазерная медицина</p>
             </div>
             <div class="col">
-                Column
+                <h6 class="d-flex justify-content-start mb-4 text-black-50">Телефон</h6>
+                <p class="fw-bold  fs-5 d-flex justify-content-start">+7 (812) 123-45-67</p>
+                <h6 class="d-flex justify-content-start mb-4 text-black-50">Адрес</h6>
+                <p class="fw-bold  fs-5 d-flex justify-content-start">Невский пр. 140, пом. 10</p>
+                <button type="button" class="btn btn-success d-flex justify-content-start">Как проехать?</button>
             </div>
         </div>
     </div>
+
+    <div class="container text-center mt-5 mb-5">
+        <div class="row ">
+            <div class="col-3">
+                <h4 class="d-flex justify-content-start mb-4">Услуги</h4>
+                <p class="d-flex justify-content-start">Косметология</p>
+                <p class="d-flex justify-content-start">Пластическая хирургия</p>
+                <p class="d-flex justify-content-start">Стоматология</p>
+                <p class="d-flex justify-content-start">Лазерная медицина</p>
+            </div>
+            <div class="col-3">
+                <h4 class="d-flex justify-content-start mb-4">Услуги</h4>
+                <p class="d-flex justify-content-start">Косметология</p>
+                <p class="d-flex justify-content-start">Пластическая хирургия</p>
+                <p class="d-flex justify-content-start">Стоматология</p>
+                <p class="d-flex justify-content-start">Лазерная медицина</p>
+            </div>
+            <div class="col-3">
+                <h4 class="d-flex justify-content-start mb-4">Услуги</h4>
+                <p class="d-flex justify-content-start">Косметология</p>
+                <p class="d-flex justify-content-start">Пластическая хирургия</p>
+                <p class="d-flex justify-content-start">Стоматология</p>
+                <p class="d-flex justify-content-start">Лазерная медицина</p>
+            </div>
+            <div class="col">
+                <h6 class="d-flex justify-content-start mb-4 text-black-50">Адрес</h6>
+                <p class="fw-bold  fs-5 d-flex justify-content-start">Большой пр. 12</p>
+                <button type="button" class="btn btn-success d-flex justify-content-start">Как проехать?</button>
+            </div>
+        </div>
+    </div>
+
 </main>
 
 <!--main закончился-->
