--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header_container container">
         <div class=" header_container-row row">
             <div class="col-3 border-start d-flex justify-content-center mt-2">
-                <img src="img/logo.svg" alt="логотип">
+                <img src="img/logo.svg" alt="логотип"> 
             </div>
             <div class="col-2 border-start d-flex justify-content-center">
                 <span class="fs-6 m-3 d-flex align-items-center">+7 (123) 456 78 90</span>
@@ -145,7 +145,7 @@
 
     <!--1 контейнер закончился -->
 
-    <div class="conteiner my-5 d-flex justify-content-end">
+    <div class="container my-5 d-flex justify-content-end">
         <div class="row">
             <div class="col-5 d-flex">
                 <div class="row d-flex flex-column bg-success bg-opacity-75 text-white">
@@ -159,7 +159,7 @@
                         <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
                             <button type="button" class="btn btn-outline-light"><i class="bi bi-arrow-right"></i>
                             </button>
-                            <span class="fs-5">ПОДРОБНЕЕ</span>
+                            <span class="fs-5 mx-2">ПОДРОБНЕЕ</span>
 
                         </div>
                     </div>
@@ -195,7 +195,7 @@
 
     <!--2 контейнер закончился-->
 
-    <div class="conteiner ">
+    <div class="container ">
         <div class="row">
             <div class="col bg-success bg-opacity-75 ">
                 <div class="row">
@@ -210,25 +210,25 @@
 
             <div class="col">
                 <div class="row">
-                    <div class="col bg-success-subtle">
+                    <div class="col bg-success-subtle text-center">
                         <h3>Почему рекомендуется посещать профессионального косметолога. Мнение специалистов центра</h3>
                         <ul>
-                            <li>Процедуры аппаратной косметологии на оборудовании экспертного класса от ведущих мировых
+                            <li class="text-start my-3">Процедуры аппаратной косметологии на оборудовании экспертного класса от ведущих мировых
                                 производителей могут проводиться в любом возрасте и решать широкий спектр проблем:
                                 возрастные изменения, покраснения, акне и купероз, потеря тонуса и упругости кожи,
                                 отечность, целлюлит и т. п.
                             </li>
-                            <li>С помощью инъекционных методик мы можем разгладить морщины, провести объёмное
+                            <li class="text-start my-3">С помощью инъекционных методик мы можем разгладить морщины, провести объёмное
                                 моделирование,
                                 увлажнить кожу, ввести активные вещества в поверхностные и средние слои кожи,
                                 запустить процессы омоложения.
                             </li>
-                            <li>Лазерное и фотоомоложение помогут запустить процесс синтеза собственного коллагена,
+                            <li class="text-start my-3">Лазерное и фотоомоложение помогут запустить процесс синтеза собственного коллагена,
                                 улучшить светооптические свойства кожи, а также получить максимальный эффект подтяжки
                                 лица
                                 без уколов и длительного восстановительного периода.
                             </li>
-                            <li>Курс процедур лазерной эпиляции поможет навсегда избавиться от проблемы нежелательных
+                            <li class="text-start my-3">Курс процедур лазерной эпиляции поможет навсегда избавиться от проблемы нежелательных
                                 волос.
                             </li>
                         </ul>
